k8s/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: healthvault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: healthvault-admin:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
