k8s/admin-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-lb
  namespace: nitishk21
spec:
  type: LoadBalancer
  selector:
    app: admin
  ports:
  - port: 80
    targetPort: 3000
