k8s/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  namespace: nitishk21
spec:
  ingressClassName: nginx
  rules:
    - host: admin.healthvault.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 80   # ✅ MUST match Service port
